styles.css
* {
  box-sizing: border-box;
}

:root {
  --black: #080808;
  --white: #fefefe;
  --gray: #565656;

  --teal: #006060;
  --violetred: #a2106d;
  --orange: #ffa500;
}

body {
  font-family: "Open Sans", "Helvetica Neue", sans-serif;
  font-size: 1.2em;
  color: var(--black);
}

h1 {
  text-align: center;
}

form {
  width: 400px;
}

.navbar {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  background-color: var(--black);
}

.navbar-list {
  margin: 0;
  padding: 0;
  float: right;
}

.navbar-list li {
  display: inline-block;
  list-style-type: none;
}

.nav-link {
  display: block;
  padding: 30px;
  color: var(--white);
  text-decoration: none;
}

.navbar-list li a:hover {
  background-color: var(--violetred);
  color: var(--white);
}

.main {
  margin-top: 100px;
  margin-left: auto;
  margin-right: auto;
}

.about-section {
  margin-top: 100px;
}

section {
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 414px) {
  .nav-link {
    padding: 30px 75px;
  }
}

@media (min-width: 415px) and (max-width: 1024px) {
  .nav-link {
    padding: 30px 25px;
  }
}

/* bio */

.bio {
  margin-left: 25%;
  margin-right: 25%;
}

/* previous work */

.divider-container {
  display: flex;
  justify-content: space-evenly;
  width: 100%;
}

.class-div {
  width: 40%;
  height: 500px;
  border: 1px solid;
  border-radius: 2%;
  background-color: var(--white);
}

.skills-div {
  width: 40%;
  height: 500px;
  border: 1px solid;
  border-radius: 2%;
  background-color: var(--white);
}

.class-header {
  margin-left: 10px;
}

.skills-header {
  margin-left: 10px;
}

/* projects */

.projects-div {
  display: flex;
  flex-direction: column;
}

.project1-div {
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 75%;
  height: 500px;
  border: 1px solid;
  border-radius: 2%;
  background-color: var(--white);
}

.project2-div {
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  width: 75%;
  height: 500px;
  border: 1px solid;
  border-radius: 2%;
  background-color: var(--white);
}

/* form */

form {
  border: 1px solid;
  border-radius: 1%;
  margin-left: auto;
  margin-right: auto;
}

form > * {
  border: 0;
  margin: 0.75em 0.5em;
}

.title {
  margin-top: 1.5em;
  margin-bottom: 0;
  margin-left: 0.45em;
}

.form-control {
  position: relative;
}

.form-control input {
  position: absolute;
  left: 150px;
  right: 0;
  border: 1px solid;
}

.date-control {
  position: relative;
}

.date-control input {
  position: absolute;
  left: 150px;
  height: 100%;
  right: 0;
  border: 1px solid;
}

.form-control label,
.date-control label,
form legend {
  font-weight: 600;
}

fieldset {
  margin-left: 0;
}

.buttons {
  margin-top: 1em;
  margin-left: 0.3em;
  margin-right: auto;
}

.submit {
  border: none;
  text-decoration: none;

  color: var(--white);
  background-color: var(--black);

  display: inline-block;

  width: 49%;
  height: 40px;

  font-size: 16px;
}

.submit:hover {
  background-color: var(--violetred);
}

.reset {
  border: 1px solid;
  text-decoration: none;

  color: var(--black);
  background-color: var(--white);

  display: inline-block;

  width: 49%;
  height: 40px;

  font-size: 16px;
}

.reset:hover {
  background-color: var(--gray);
}

